--- a/3dArkanoidsEditor/Views/PlayBoardCanvas.xaml
+++ b/3dArkanoidsEditor/Views/PlayBoardCanvas.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:_3dArkanoidsEditor.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Canvas x:Name="m_playBoardCanvas" Background="BlueViolet">
+    <Canvas x:Name="m_playBoardCanvas" Visibility="Visible" Background="BlueViolet">
         
     </Canvas>
 </UserControl>
