--- a/3dArkanoidsEditor/Views/PlayBoardCanvas.xaml
+++ b/3dArkanoidsEditor/Views/PlayBoardCanvas.xaml
@@ -4,9 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:_3dArkanoidsEditor.Views"
+             xmlns:vms="clr-namespace:_3dArkanoidsEditor.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Canvas x:Name="m_playBoardCanvas" Visibility="Visible" Background="BlueViolet">
+        <StackPanel Orientation="Horizontal">
+            <Canvas x:Name="m_playBoardCanvas" Visibility="Visible" Background="LimeGreen"/>
+        <Slider x:Name="m_zSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="0" Maximum="{Binding MaxLayerIndex}" Value="{Binding CurrentLayer, Mode=TwoWay}" Orientation="Vertical" >
+
+        </Slider>
+        </StackPanel>
         
-    </Canvas>
+        
+    
 </UserControl>
