--- a/3dArkanoidsEditor/MainWindow.xaml
+++ b/3dArkanoidsEditor/MainWindow.xaml
@@ -6,6 +6,8 @@
         xmlns:local="clr-namespace:_3dArkanoidsEditor"
         xmlns:views="clr-namespace:_3dArkanoidsEditor.Views"
         mc:Ignorable="d"
+        xmlns:t="clr-namespace:Simple.Wpf.Terminal;assembly=Simple.Wpf.Terminal"
+        xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         Title="MainWindow" Height="800" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -26,6 +28,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="5"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="2">
@@ -38,7 +41,27 @@
             PlayBoardTilesX="{Binding PlayFieldX}"
             PlayBoardTilesY="{Binding PlayFieldY}"
             PlayBoardTilesZ="{Binding PlayFieldZ}"
-            PlayBoardDescription="{Binding GameBoardDescription}"
+            PlayBoardDescription="{Binding MasterGameBoard}"
             SingleTileEdit="{Binding OnSingleTileEditCommand}"/>
+        <t:Terminal x:Name="TerminalOutput"
+                    IsReadOnlyCaretVisible="False"
+                    VerticalScrollBarVisibility="Visible"
+                    IsReadOnly="false"
+                    Prompt="8==D"
+                    DataContext="{Binding GameTerminal}"
+                    ItemsSource="{Binding Path=ConsoleItems, Mode=OneWay}"
+                    Grid.Row="7"
+                    Grid.ColumnSpan="6"
+                    Grid.Column="1"
+                    Height="200">
+
+            <b:Interaction.Triggers>
+                <b:EventTrigger EventName="LineEntered">
+                    <b:InvokeCommandAction Command="{Binding Path=ExecuteTerminalItemCommand, Mode=OneWay}"
+                                           CommandParameter="{Binding Path=Line, Mode=OneWay, ElementName=TerminalOutput}" />
+                </b:EventTrigger>
+            </b:Interaction.Triggers>
+
+        </t:Terminal>
     </Grid>
 </Window>
